--- a/Changes
+++ b/Changes
@@ -1,3 +1,16 @@
+0.07  Fri Jan 22 10:43:10 PST 2010
+  Bug Fixes:
+  * Classes which defined constants did not work with mixin on
+    Perl 5.10.x. [rt.cpan.org 40495]
+
+  Interface:
+  - Slightly better error message when trying to use a mixin and you're
+    not of the right class.
+
+  Documentation:
+  * Add copyright and license
+
+
 0.06  Wed Apr 18 10:08:59 PDT 2007
   Documentation:
   * Documented the behavior of SUPER
